# memefun-protocol

./: .gitignore  ADJUSTABLE_TRADING_FEE_IMPLEMENTATION.md  AUDIT_REPORT.md  AUDIT_REPORT_V2.md  AUDIT_V2_SUMMARY.md  Anchor.toml  BUYBACK_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT_V2.md  COMPREHENSIVE_AUDIT_REPORT_V3.md  CREATOR_TOKEN_RELEASE_MECHANISM.md  CRITICAL_ISSUES_FIXED.md  CRITICAL_ISSUES_V3.md  FAIR_VOTING_IMPLEMENTATION.md  FAIR_VOTING_SAFEGUARDS.md  FEE_DISTRIBUTION_ALIGNMENT.md  FEE_STRUCTURE_ANALYSIS.md  FINAL_AUDIT_REPORT_V4.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  FIXES_SUMMARY.md  GOVERNANCE_POWER_STRUCTURE.md  GOVERNANCE_TOKEN_SYSTEM.md  PHASE_1_3_FEATURES.md  PLATFORM_FEE_STRUCTURE.md  PLATFORM_USER_FLOWS.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SMEME_DISTRIBUTION_STRATEGY.md  STAKING_GOVERNANCE_ANALYSIS.md  STAKING_GOVERNANCE_DIFFERENTIATION.md  STAKING_GOVERNANCE_IMPROVEMENTS.md  WEALTH_CREATION_STRATEGY.md  anchor.toml  buyback_executor.js  docker-compose.yml  env.example  index.html  jest.config.js  package.json  (+3 more)
src/programs/solana-memes/: Cargo.toml
src/programs/solana-memes/src/: buyback.rs  errors.rs  fair_voting_utils.rs  lib.rs  phase_1_3_structures.rs  security.rs  security_utils.rs  state.rs
src/programs/solana-memes/src/instructions/: buyback_management.rs  choose_vesting_option.rs  claim_vested.rs  collect_trading_fee.rs  create_lbm_pool.rs  create_token.rs  deploy_governance_token.rs  fair_voting_management.rs  finalize_lbm.rs  governance_voting.rs  initialize.rs  mod.rs  (+11 more)
(+41 files in other folders)
